# python-sqlalchemy2

./: .env.example  pyproject.toml
docker/mysql/: docker-compose.yml
docker/postgresql/: docker-compose.yml
section1/: import_movies.py  models.py
section2/: models.py  movies.csv
section3/: db.py  import_movies.py
section3/migrations/: env.py
section3/migrations/versions/: 034e4b303867_add_movies_directors.py
